--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,7 +3,6 @@ name: Update README
 on:
   schedule:
     - cron: '0 * * * *'  # 每小时运行一次
-  workflow_dispatch:
 
 jobs:
   build:
@@ -16,6 +15,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
 
     - name: Update README
       run: |
