--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -3,7 +3,7 @@ name: Update README
 on:
   schedule:
     - cron: '0 * * * *'  # 每小时运行一次
-  workflow_dispatch
+  workflow_dispatch:
 
 jobs:
   build:
