--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -27,3 +27,11 @@ jobs:
         API_KEY: ${{ secrets.API_KEY }} 
       run: |
         python update_readme.py
+    - name: Commit and push if changed
+      run: |
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
+        git add -A
+        git diff --quiet && git diff --staged --quiet || git commit -m "Update README"
+        git push
+
