--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -26,6 +26,7 @@ jobs:
       env: 
         API_KEY: ${{ secrets.API_KEY }} 
       run: |
+        chmod +x update_readme.py
         python update_readme.py
         
     - name: Commit and push if changed
