--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -33,5 +33,5 @@ jobs:
           git config --global user.name "GitHub Actions"
           git add -A
           git diff --quiet && git diff --staged --quiet || git commit -m "Update README"
-          git remote set-url origin https://github.com/ikun1993/biliupstart.git
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/ikun1993/biliupstart.git
           git push
