--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -47,6 +47,10 @@ jobs:
             fs.writeFileSync('README.md', readme);
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Add changes to git
+        run: |
+          git add run_count.txt
+
       - name: Commit and push changes
         run: |
           git config --local user.email "actions@github.com"
