--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -40,7 +40,9 @@ jobs:
       - name: Check if Run Count has increased
         id: check_run_count
         run: |
-          if [ $(cat run_count.txt | tail -1 | cut -d'=' -f2) -le $(cat run_count.txt | tail -2 | head -1 | cut -d'=' -f2) ]; then
+          echo "PREV_RUN_COUNT=$(cat run_count.txt | tail -2 | head -1 | cut -d'=' -f2)" >> $GITHUB_ENV
+          echo "CURR_RUN_COUNT=$(cat run_count.txt | tail -1 | cut -d'=' -f2)" >> $GITHUB_ENV
+          if [ $CURR_RUN_COUNT -le $PREV_RUN_COUNT ]; then
             echo "skip=true" >> $GITHUB_ENV
           fi
 
