--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -42,18 +42,15 @@ jobs:
         run: |
           PREV_RUN_COUNT=$(cat run_count.txt | tail -2 | head -1 | cut -d'=' -f2)
           CURR_RUN_COUNT=$(cat run_count.txt | tail -1 | cut -d'=' -f2)
-          if [ $((CURR_RUN_COUNT)) -le $((PREV_RUN_COUNT)) ]; then
-            echo "skip=true" >> $GITHUB_ENV
+          if [ $((CURR_RUN_COUNT)) -gt $((PREV_RUN_COUNT)) ]; then
+            echo "skip=false" >> $GITHUB_ENV
           fi
 
-      - name: Debug
-        run: echo "Skip value is ${{ env.skip }}"
-        
       - name: Set Run Count as env variable
         run: echo "total_run_count=$(cat run_count.txt | tail -1 | cut -d'=' -f2)" >> $GITHUB_ENV
 
       - name: Update README
-        if: env.skip != 'true'
+        if: env.skip == 'false'
         uses: actions/github-script@v7
         with:
           script: |
