--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -17,39 +17,27 @@ jobs:
         with:
           token: ${{ secrets.GH_TOKEN }} 
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.8
-
-      - name: Install dependencies
+      - name: Set up Python and Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          sudo apt-get install python3.8
+          python3.8 -m pip install --upgrade pip
           pip install requests
 
-      - name: Get Run Count
-        id: get_run_count
+      - name: Get and Check Run Count
+        id: get_check_run_count
         run: |
           import requests
           API_KEY = "${{ secrets.API_KEY }}"
           response = requests.get("https://run.iokun.cn/get_run_count/total", headers={"X-API-KEY": API_KEY})
           run_count = response.json()["total_run_count"]
           print(f"total_run_count={run_count}", file=open("run_count.txt", "a"))
+          if [ $(( $(cat run_count.txt | tail -1 | cut -d'=' -f2) )) -gt $(( $(cat run_count.txt | tail -2 | head -1 | cut -d'=' -f2) )) ]; then
+            echo "skip=false" >> $GITHUB_ENV
+            echo "total_run_count=$(cat run_count.txt | tail -1 | cut -d'=' -f2)" >> $GITHUB_ENV
+          fi
         shell: python
 
-      - name: Check if Run Count has increased
-        id: check_run_count
-        run: |
-          PREV_RUN_COUNT=$(cat run_count.txt | tail -2 | head -1 | cut -d'=' -f2)
-          CURR_RUN_COUNT=$(cat run_count.txt | tail -1 | cut -d'=' -f2)
-          if [ $((CURR_RUN_COUNT)) -gt $((PREV_RUN_COUNT)) ]; then
-            echo "skip=false" >> $GITHUB_ENV
-          fi
-
-      - name: Set Run Count as env variable
-        run: echo "total_run_count=$(cat run_count.txt | tail -1 | cut -d'=' -f2)" >> $GITHUB_ENV
-
-      - name: Update README
+      - name: Update README and Push Changes
         if: env.skip == 'false'
         uses: actions/github-script@v7
         with:
@@ -69,18 +57,10 @@ jobs:
               readme += `\n${runCountString}`;
             }
             fs.writeFileSync('README.md', readme);
+            git add run_count.txt
+            git add README.md
+            git config --local user.email "actions@github.com"
+            git config --local user.name "GitHub Actions"
+            git commit -am "feat: update run count in README"
+            git push
           github-token: ${{ secrets.GH_TOKEN }}
-
-      - name: Add changes to git
-        if: env.skip == 'false'
-        run: |
-          git add run_count.txt
-          git add README.md
-
-      - name: Commit and push changes
-        if: env.skip == 'false'
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git commit -am "feat: update run count in README"
-          git push
