--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Python and Install dependencies
         run: |
           sudo apt-get install python3.8
-          python3.8 -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install requests
 
       - name: Get and Check Run Count
