--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -17,10 +17,12 @@ jobs:
         with:
           token: ${{ secrets.GH_TOKEN }} 
 
-      - name: Set up Python and Install dependencies
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: 3.8
+          
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests
@@ -33,11 +35,14 @@ jobs:
           response = requests.get("https://run.iokun.cn/get_run_count/total", headers={"X-API-KEY": API_KEY})
           run_count = response.json()["total_run_count"]
           print(f"total_run_count={run_count}", file=open("run_count.txt", "a"))
-          if [ $(( $(cat run_count.txt | tail -1 | cut -d'=' -f2) )) -gt $(( $(cat run_count.txt | tail -2 | head -1 | cut -d'=' -f2) )) ]; then
-            echo "skip=false" >> $GITHUB_ENV
-            echo "total_run_count=$(cat run_count.txt | tail -1 | cut -d'=' -f2)" >> $GITHUB_ENV
-          fi
         shell: python
+
+      - name: Check if Run Count has increased
+        run: |
+          if [ $((cat run_count.txt | tail -1 | cut -d'=' -f2)) -gt $((cat run_count.txt | tail -2 | head -1 | cut -d'=' -f2)) ]; then
+            echo "skip=false" >> $GITHUB_ENV
+            echo "total_run_count=$CURR_RUN_COUNT" >> $GITHUB_ENV
+          fi
 
       - name: Update README and Push Changes
         if: env.skip == 'false'
