--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -1,34 +1,28 @@
 name: Update
-
 on:
   schedule:
     - cron: '0 0 * * *'  # 每天运行一次
   workflow_dispatch:
   repository_dispatch:
     types: server-update
-
 jobs:
   update_run_count:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GH_TOKEN }} 
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: 3.8
-          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests
-
-      - name: Get and Check Run Count
-        id: get_check_run_count
+      - name: Get Run Count
+        id: get_run_count
         run: |
           import requests
           API_KEY = "${{ secrets.API_KEY }}"
@@ -36,17 +30,17 @@ jobs:
           run_count = response.json()["total_run_count"]
           print(f"total_run_count={run_count}", file=open("run_count.txt", "a"))
         shell: python
-
       - name: Check if Run Count has increased
+        id: check_run_count
         run: |
-          PREV_RUN=$(cat run_count.txt | tail -2 | head -1 | cut -d'=' -f2)
-          CURR_RUN=$(cat run_count.txt | tail -1 | cut -d'=' -f2)
-          if [ $((CURR_RUN)) -gt $((PREV_RUN)) ]; then
+          PREV_RUN_COUNT=$(cat run_count.txt | tail -2 | head -1 | cut -d'=' -f2)
+          CURR_RUN_COUNT=$(cat run_count.txt | tail -1 | cut -d'=' -f2)
+          if [ $((CURR_RUN_COUNT)) -gt $((PREV_RUN_COUNT)) ]; then
             echo "skip=false" >> $GITHUB_ENV
-            echo "total_run_count=$CURR_RUN_COUNT" >> $GITHUB_ENV
           fi
-
-      - name: Update README and Push Changes
+      - name: Set Run Count as env variable
+        run: echo "total_run_count=$(cat run_count.txt | tail -1 | cut -d'=' -f2)" >> $GITHUB_ENV
+      - name: Update README
         if: env.skip == 'false'
         uses: actions/github-script@v7
         with:
@@ -66,10 +60,17 @@ jobs:
               readme += `\n${runCountString}`;
             }
             fs.writeFileSync('README.md', readme);
-            git add run_count.txt
-            git add README.md
-            git config --local user.email "actions@github.com"
-            git config --local user.name "GitHub Actions"
-            git commit -am "feat: update run count in README"
-            git push
           github-token: ${{ secrets.GH_TOKEN }}
+
+      - name: Add changes to git
+        if: env.skip == 'false'
+        run: |
+          git add run_count.txt
+          git add README.md
+      - name: Commit and push changes
+        if: env.skip == 'false'
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git commit -am "feat: update run count in README"
+          git push
