--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GH_TOKEN }} 
+          
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -21,15 +22,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests
+          
       - name: Get Run Count
         id: get_run_count
         run: |
           import requests
           API_KEY = "${{ secrets.API_KEY }}"
-          response = requests.get("https://run.iokun.cn/get_run_count/total", headers={"X-API-KEY": API_KEY})
+          MAC_ADDRESS = "${{ secrets.MAC_ADDRESS }}"  # 添加这一行
+          response = requests.get("https://run.iokun.cn/get_run_count/total", headers={"X-API-KEY": API_KEY, "X-MAC-ADDRESS": MAC_ADDRESS})  # 修改这一行
           run_count = response.json()["total_run_count"]
           print(f"total_run_count={run_count}", file=open("run_count.txt", "a"))
         shell: python
+        
       - name: Check if Run Count has increased
         id: check_run_count
         run: |
@@ -38,6 +42,7 @@ jobs:
           if [ $((CURR_RUN_COUNT)) -gt $((PREV_RUN_COUNT)) ]; then
             echo "skip=false" >> $GITHUB_ENV
           fi
+          
       - name: Set Run Count as env variable
         run: echo "total_run_count=$(cat run_count.txt | tail -1 | cut -d'=' -f2)" >> $GITHUB_ENV
       - name: Update README
