--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -32,8 +32,7 @@ jobs:
           GH_TOKEN = "${{ secrets.GH_TOKEN }}" 
           response = requests.get("https://run.iokun.cn/get_run_count/total", headers={"X-API-KEY": API_KEY, "X-MAC-ADDRESS": MAC_ADDRESS, "X-GitHub-Token": "${{ secrets.GH_TOKEN }}"})
           run_count = response.json()["total_run_count"]
-          with open("run_count.txt", "a") as file:
-              print(f"total_run_count={run_count}", file=file)
+          print(f"total_run_count={run_count}", file=open("run_count.txt", "a"))
         shell: python
         
       - name: Check if Run Count has increased
