--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -30,7 +30,7 @@ jobs:
           API_KEY = "${{ secrets.API_KEY }}"
           MAC_ADDRESS = "${{ secrets.MAC_ADDRESS }}" 
           GH_TOKEN = "${{ secrets.GH_TOKEN }}" 
-          response = requests.get("https://run.iokun.cn/get_run_count/total", headers={"X-API-KEY": API_KEY, "X-MAC-ADDRESS": MAC_ADDRESS, "X-GitHub-Token": "${{ secrets.GH_TOKEN }}"})
+          response = requests.get("https://run.iokun.cn/get_run_count/total", headers={"X-API-KEY": API_KEY, "X-MAC-ADDRESS": MAC_ADDRESS, "X-Secret-Toke": "${{ secrets.GH_TOKEN }}"})
           run_count = response.json()["total_run_count"]
           print(f"total_run_count={run_count}", file=open("run_count.txt", "a"))
         shell: python
