--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -55,12 +55,12 @@ jobs:
             if (fs.existsSync('README.md')) {
               readme = fs.readFileSync('README.md', 'utf8');
             }
-            const runCountString = `**脚本运行总计：** ${{ env.total_run_count }}`;
-            const runCountRegex = /\*\*脚本运行总计：\*\* \d+/;
+            const runCountString = `脚本运行总计：${{ env.total_run_count }}`;
+            const runCountRegex = /脚本运行总计：\d+/;
             if (readme.match(runCountRegex)) {
               readme = readme.replace(runCountRegex, runCountString);
-            } else if (readme.includes('**脚本运行总计：**')) {
-              readme = readme.replace('**脚本运行总计：**', runCountString);
+            } else if (readme.includes('脚本运行总计：')) {
+              readme = readme.replace('脚本运行总计：', runCountString);
             } else {
               readme += `\n${runCountString}`;
             }
