--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -12,12 +12,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_TOKEN }} 
+          token: ${{ secrets.GH_PAT }}  
           
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: 3.8
+          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -28,8 +29,8 @@ jobs:
         run: |
           import requests
           API_KEY = "${{ secrets.API_KEY }}"
-          MAC_ADDRESS = "${{ secrets.MAC_ADDRESS }}"  # 添加这一行
-          response = requests.get("https://run.iokun.cn/get_run_count/total", headers={"X-API-KEY": API_KEY, "X-MAC-ADDRESS": MAC_ADDRESS})  # 修改这一行
+          MAC_ADDRESS = "${{ secrets.MAC_ADDRESS }}"  
+          response = requests.get("https://run.iokun.cn/get_run_count/total", headers={"X-API-KEY": API_KEY, "X-MAC-ADDRESS": MAC_ADDRESS})  
           run_count = response.json()["total_run_count"]
           print(f"total_run_count={run_count}", file=open("run_count.txt", "a"))
         shell: python
@@ -45,6 +46,11 @@ jobs:
           
       - name: Set Run Count as env variable
         run: echo "total_run_count=$(cat run_count.txt | tail -1 | cut -d'=' -f2)" >> $GITHUB_ENV
+      
+      - name: Create new branch
+        run: |
+          git checkout -b update-run-count
+          
       - name: Update README
         if: env.skip == 'false'
         uses: actions/github-script@v7
@@ -65,17 +71,18 @@ jobs:
               readme += `\n${runCountString}`;
             }
             fs.writeFileSync('README.md', readme);
-          github-token: ${{ secrets.GH_TOKEN }}
+          github-token: ${{ secrets.GH_PAT }}  
 
-      - name: Add changes to git
-        if: env.skip == 'false'
+      - name: Push changes to new branch
         run: |
-          git add run_count.txt
-          git add README.md
-      - name: Commit and push changes
-        if: env.skip == 'false'
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git commit -am "feat: update run count in README"
-          git push
+          git push origin update-run-count
+          
+      - name: Create Pull Request
+        uses: repo-sync/pull-request@v2
+        with:
+          source_branch: "update-run-count"
+          destination_branch: "main"
+          github_token: ${{ secrets.GH_PAT }}
+          pr_title: "feat: update run count in README"
+          pr_body: "This PR updates the run count in README."
+          pr_label: "automated pr"
